# PS2Recomp

./: CMakeLists.txt
ps2xAnalyzer/src/: elf_analyzer.cpp
ps2xRecomp/src/lib/: code_generator.cpp  config_manager.cpp  elf_parser.cpp  ps2_recompiler.cpp
ps2xRuntime/include/: ThreadNaming.h  ps2_call_list.h  ps2_runtime.h  ps2_runtime_macros.h
ps2xRuntime/src/lib/: ps2_runtime.cpp  ps2_stubs.cpp  ps2_syscalls.cpp
